--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ main{
 }
 
 img {
-  width: 10vw;
+  width: 100px;
   height: auto;
 }
 
@@ -109,6 +109,11 @@ img {
 
 /* Adjust Font Size for Mobile Phones */
 @media screen and (max-width: 380px) {
+  img {
+    width: 10vw;
+    height: auto;
+  }
+  
   body {
     font-size: 10px; /* Smaller font for small screens */
   }
