--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,6 @@ nav a {
   margin: 0 4vw;
 }
 
-main {
-  padding: 20px;
-}
-
 header .content-container {
   display: flex;
   flex-wrap: wrap;
@@ -74,9 +70,9 @@ header .content-container {
 }
 
 main{
-  background: radial-gradient(circle, #F1D395, #D9B884),
+  /*background: radial-gradient(circle, #F1D395, #D9B884),
               linear-gradient(190deg, #B2CAC2, #216A59);
-  background-blend-mode: overlay;
+  background-blend-mode: overlay;*/
 }
 
 .circle-frame img {
