--- a/styles.css
+++ b/styles.css
@@ -75,21 +75,24 @@ main{
 }
 
 .circle-frame img {
+  padding: 0px;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 img {
+  padding-left: 30px;
   width: 100px;
   height: auto;
 }
 
 /* Adjust Font Size for Tablets */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 777px) {
   img {
     width: 10vw;
     height: auto;
+    padding: 0px;
   }
   
   body {
