--- a/styles.css
+++ b/styles.css
@@ -81,18 +81,23 @@ main{
   object-fit: cover;
 }
 
+.center-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 img {
-  padding-left: 30px;
-  width: 100px;
+  width: 400px;
   height: auto;
 }
 
 /* Adjust Font Size for Tablets */
 @media screen and (max-width: 777px) {
   img {
-    width: 10vw;
+    width: 30vw;
     height: auto;
-    padding: 0px;
   }
   
   body {
