--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,14 @@ nav a {
     flex: 1;
 }
 
+.circle-frame-large {
+  width: 155px;
+  height: 155px;
+  border-radius: 50%;
+  border: 5px solid #3D7F71;
+  overflow: hidden;
+}
+
 .circle-frame {
   width: 125px;
   height: 125px;
@@ -92,7 +100,7 @@ a{
     color:#107F63;
 }
 
-.circle-frame img {
+.circle-frame img, .circle-frame-large img {
   padding: 0px;
   width: 100%;
   height: 100%;
@@ -135,6 +143,12 @@ img {
     height: 80px;
     border: 3px solid #3D7F71;
   }
+  
+  .circle-frame-large {
+    width: 105px;
+    height: 105px;
+    border: 2px solid #3D7F71;
+  }
 }
 
 /* Adjust Font Size for Mobile Phones */
@@ -150,6 +164,12 @@ img {
   .circle-frame {
     width: 50px;
     height: 50px;
+    border: 2px solid #3D7F71;
+  }
+  
+  .circle-frame-large {
+    width: 75px;
+    height: 75px;
     border: 2px solid #3D7F71;
   }
 }
