--- a/styles.css
+++ b/styles.css
@@ -192,8 +192,8 @@ hr.rounded {
 .slide *{
   align-items: center;
   justify-content: center;
-  height: 70vh;
   width: auto;
+  height: 30vw;
 }
 
 /* Next & previous buttons */
@@ -277,17 +277,38 @@ hr.rounded {
   header{
     font-size: 2vw;
   }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3{
+    font-size: 25px;
+  }
   
   .circle-frame {
-    width: 80px;
-    height: 80px;
-    border-width: 3px;
+    width: 95px;
+    height: 95px;
+    border-width: 4px;
   }
   
   .circle-frame-large {
-    width: 105px;
-    height: 105px;
+    width: 115px;
+    height: 115px;
     border-width: 5px;
+  }
+
+  .dot {
+    height: 10px;
+    width: 10px;
+  }
+
+  .content-container{
+    flex-direction: column;
+  }
+
+  .content-container .content-container{
+    flex-direction: column;
   }
 }
 
@@ -302,9 +323,9 @@ hr.rounded {
   }
   
   .circle-frame {
-    width: 50px;
-    height: 50px;
-    border-width: 2px;
+    width: 60px;
+    height: 60px;
+    border-width: 3px;
   }
   
   .circle-frame-large {
