--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,14 @@ p {
     font-size: 18px;
 }
 
-footer p {
+#contact{
+  padding-top: 10px;
+  padding-bottom: 70px;
+}
+
+#contact p {
     font-size: 16px;
+    font-weight: 300;
 }
 
 header {
@@ -79,6 +85,7 @@ nav a {
   color: #333;
   text-decoration: none;
   margin: 0 4vw;
+  vertical-align: middle;
 }
 
 /* Add underline to navbar links on hover */
@@ -161,6 +168,23 @@ img, video {
 .logo-small{
   width: auto;
   height: 10rem;
+}
+
+.fa{
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+  text-decoration: none;
+}
+
+#contact .fa{
+  width: 3rem;
+  height: 3rem;
 }
 
 section#about, section#join{
@@ -298,7 +322,7 @@ hr#slide {
 }
 
 
-#footer-text a{
+footer a{
   color: #F1D395;
 }
 
